# kin

./: .gitignore  Cargo.toml  build.lua  design.md  lua.fmt  readme.md  spec.md  todo.txt
clibs/: kin.h  list.h  noot.h  test.c  utf8.h  value.h
src/: ast.rs  compile.rs  grammar.pest  jit.rs  lex.lua  lexer.rs  main.lua  main.rs  parse.rs  resolve.rs  transpile.rs  types.rs  utils.lua  value.rs
