[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
edition = '2018'
name = 'noot'
version = '0.1.0'

[dependencies]
anyhow = '1'
clap.features = ['derive']
clap.version = '3.0.0-beta.2'
color-backtrace = '0.5'
itertools = '0.10'
pest = '2'
pest_derive = '2'
rpds = '0.9'

[features]
debug = []
dechain = []
